[gd_scene load_steps=12 format=2]

[ext_resource path="res://styling/fonts/NotoSans_Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://styling/fonts/NotoSans.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/launchline.png" type="Texture" id=3]
[ext_resource path="res://styling/button_style/CloseButton_hover.stylebox" type="StyleBox" id=4]
[ext_resource path="res://styling/button_style/ApplyButton_hover.stylebox" type="StyleBox" id=5]
[ext_resource path="res://styling/button_style/ApplyButton_pressed.stylebox" type="StyleBox" id=6]
[ext_resource path="res://styling/button_style/ApplyButton_normal.stylebox" type="StyleBox" id=7]
[ext_resource path="res://styling/button_style/CloseButton_pressed.stylebox" type="StyleBox" id=8]
[ext_resource path="res://styling/button_style/CloseButton_normal.stylebox" type="StyleBox" id=9]
[ext_resource path="res://logic/InstructionsMenu.gd" type="Script" id=10]
[ext_resource path="res://images/specials.png" type="Texture" id=11]

[node name="PopupDialog" type="PopupDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -600.0
margin_right = 300.0
margin_bottom = 600.0
rect_min_size = Vector2( 640, 1200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 1160.0

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
text = "Instructions"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 600.0
margin_bottom = 1098.0
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer"]
margin_right = 592.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "In BrickBuster, you shoot balls to bust bricks."
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 592.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 2 )
text = "Tap and drag to direct your balls. A launch line will appear to show you where your balls will go."
autowrap = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 592.0
margin_bottom = 519.0
custom_fonts/font = ExtResource( 2 )
text = "Once you release, the balls will be launched!"
autowrap = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer"]
margin_top = 539.0
margin_right = 592.0
margin_bottom = 946.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer"]
margin_top = 966.0
margin_right = 592.0
margin_bottom = 1024.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Next"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_right = 592.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ring-shaped specials will appear during the game. "
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_top = 139.0
margin_right = 592.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Adders give one more ball for your next launch."
autowrap = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_top = 278.0
margin_right = 592.0
margin_bottom = 397.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "Bouncers launch your balls in random directions."
autowrap = true

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_top = 417.0
margin_right = 592.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Laser specials shoot lasers across the screen, damaging bricks."
autowrap = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_top = 617.0
margin_right = 592.0
margin_bottom = 946.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="PrevButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2"]
margin_top = 966.0
margin_right = 592.0
margin_bottom = 1024.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Previous"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 1102.0
margin_right = 600.0
margin_bottom = 1160.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 2 )
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_PopupDialog_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/VBoxContainer2/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
